--- a/src/index.scss
+++ b/src/index.scss
@@ -37,62 +37,27 @@ header{
 }
 
 
-.card{
-  border: 1px solid #F3E3f3;
-  padding: 30px;
-  width: 220px;
-  border-radius: 40px;
-  margin-right: 30px;
-  transition: box-shadow .2s ease-in-out transform .2s ease-in-out;
-  cursor: pointer;
 
-  &:hover{
-    box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.06);
-    transform: translateY(-5px);
-  }
-
-  .favorite{
-    position: absolute;
-    cursor: pointer;
-  }
-
-  span{
-    font-size: 13px;
-    opacity: 0.5;
-    text-transform: uppercase;
-  }
-
-  b{
-    font-size: 13px;
-  }
-
-  h5{
-    font-weight: 400;
-    font-size: 14px;
-  }
-
-}
-
-.button{
-  background: #FFFFFF;
-  border: 1px solid #F2F2F2;
-  box-sizing: border-box;
-  border-radius: 8px;
-  width: 32px;
-  height: 32px;
-  cursor: pointer;
-}
 
 .search-block{
   border: 1px solid #f3f3f3;
   border-radius: 10px;
   padding: 0 15px;
+  position: relative;
 
   input{
     border: 0;
     padding: 13px;
     font-size: 16px;
     width: 200px;
+  }
+
+  .clear{
+    position: absolute;
+    top: 14px;
+    right: 10px;
+    width: 18px;
+    height: 18px;
   }
 }
 
@@ -225,5 +190,16 @@ header{
   }
   &:active{
     background: darken($color: #9dd558, $amount: 6%);
+  }
+}
+
+.cartEmpty{
+
+  p{
+    width: 60%;
+  }
+
+  .greenButton{
+    width: 50%;
   }
 }
